---
title: edu.nust.game.scenes.levelscene.gameobjects.statics
config:
  look: classic
  layout: elk
  flowchart:
    curve: linear
  class:
    defaultRenderer: dagre-wrapper
---
classDiagram
  class Bush
  class FallenTree
  class GroundGrass
  class Garbage
  class Stick
  class Tree
  class Rock
  class Flower
  class TreeStump
  class Grass
namespace edu.nust.game.scenes.levelscene.gameobjects.statics.meta {
  class SerializablePlacement
  class StaticObjectFactory
  class StaticObjectType <<enumeration>>
  class StaticObject
}
StaticObject <|-- Bush : extends
StaticObject <|-- FallenTree : extends
StaticObject <|-- Flower : extends
StaticObject <|-- Garbage : extends
StaticObject <|-- Grass : extends
StaticObject <|-- GroundGrass : extends
StaticObject <|-- Rock : extends
StaticObject <|-- Stick : extends
StaticObject <|-- Tree : extends
StaticObject <|-- TreeStump : extends
SerializablePlacement --> StaticObjectType : uses
StaticObjectFactory --> StaticObject : uses
StaticObjectFactory --> StaticObjectType : uses